plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'com.google.gms.google-services'
    // Add the Crashlytics Gradle plugin
    id 'com.google.firebase.crashlytics'
//    id 'com.onesignal.androidsdk.onesignal-gradle-plugin'
}



android {
    compileSdk 35
    namespace 'com.rbs.studio.trackless.vpn'
    defaultConfig {
        applicationId "ultra.vpn.ipchanger.unblock.free.proxy"
        minSdk 22
        targetSdk 35
        versionCode 4
        versionName "4.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        buildConfigField "String", "BASE_HOST", "\"https://awebhtpo3u8g5t.ecoweb-network.com\""

        buildConfigField "String", "BASE_CARRIER_ID", "\"touchvpn\""

        buildConfigField "String", "BASE_OAUTH_METHOD", "\"anonymous\""

        buildConfigField "String", "SHARED_PREFS", "\"NORTHGHOST_SHAREDPREFS\""
        buildConfigField "String", "STORED_HOST_URL_KEY", "\"com.northghost.afvclient.STORED_HOST_KEY\""
        buildConfigField "String", "STORED_CARRIER_ID_KEY", "\"com.northghost.afvclient.CARRIER_ID_KEY\""


        buildConfigField "Boolean", "USE_IN_APP_PURCHASE", "true"
        buildConfigField "String", "IN_APPKEY", "\"MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAl5uXMT/9fIpE/SZvg2/5TeAgwtaCoUhyfZTff2UZqJaUN48fhr6Rev71Jyptw8ZswyOmR+E7y6JBxpxkOgw9BSUYaYmLwzJfcVaLBlU8dceFNGIEuToICMrJdRFCKjs2EfvFHjzg6uRFUUB4K+XikYlQE3plSAxxMpuuAwFaUYTqBB/ZOQVQDZF73kA7xaksePDex+yILc8+Sm5C/tfwVxx1aj1ISZmHj2S1ZYI4zHPMquO3hfxNxYMW+2VOzBrGu2ZbUnz8v1rPmHqMOQhV7mMLKTZRi53BsZ9OgfN+ObSnNw4rrGY3iOEUtaelHax0c1Dz2diyqO61luFKaoOcuwIDAQAB\""
        buildConfigField "String", "MONTHLY", "\"oll_feature_for_onemonth\""
        buildConfigField "String", "SIX_MONTH", "\"oll_feature_for_sixmonth\""
        buildConfigField "String", "YEARLY", "\"oll_feature_for_year\""
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {

        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    kotlinOptions {
        jvmTarget = '1.8'
    }

    buildFeatures{
        dataBinding true
        buildConfig = true
        viewBinding true
    }

    packagingOptions {
        resources {
            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0']
        }
    }

}

tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.forkOptions.jvmArgs += [
            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
    ]
}
dependencies {

    // Kotlin standard library
    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.0'

    implementation 'com.google.android.gms:play-services-safetynet:18.0.1'

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.10.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'com.github.orhanobut:hawk:2.0.1'


    implementation 'com.github.AnchorFreePartner.hydra-sdk-android:sdk-core:4.5.0'
    implementation 'com.github.AnchorFreePartner.hydra-sdk-android:hydra:4.5.0'
    implementation 'com.github.AnchorFreePartner.hydra-sdk-android:openvpn:4.5.0'
    implementation 'com.intuit.sdp:sdp-android:1.1.1'

    implementation 'androidx.multidex:multidex:2.0.1'

    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'

    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
//    implementation 'com.github.guilhe:circular-progress-view:2.0.0'
//    implementation 'com.shimaami.android:progressview:1.0.1'
//    implementation 'com.github.Triggertrap:SeekArc:v1.1'

    implementation 'com.github.ibrahimsn98:speedometer:1.0.1'
    implementation 'com.github.anastr:speedviewlib:1.6.0'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'androidx.browser:browser:1.7.0'
    implementation 'com.github.ybq:Android-SpinKit:1.4.0'

// firebase remote config
    implementation 'com.google.firebase:firebase-config:21.6.0'
    implementation 'com.google.firebase:firebase-analytics:21.5.0'

    implementation 'com.google.android.gms:play-services-auth:20.7.0'
    implementation 'com.google.firebase:firebase-auth:22.2.0'
    implementation 'com.google.firebase:firebase-database:20.3.0'
    implementation 'com.google.android.gms:play-services-ads:22.5.0'


    //Billing
    implementation 'com.android.billingclient:billing:6.1.0'
    //stripe
    implementation 'com.stripe:stripe-android:20.19.2'
    implementation "com.stripe:stripe-java:20.24.0"
    implementation 'com.github.bumptech.glide:glide:4.15.1'




    implementation platform('com.google.firebase:firebase-bom:32.6.0')
    implementation 'com.google.firebase:firebase-crashlytics'
    implementation 'com.airbnb.android:lottie:6.1.0'
    implementation 'com.google.firebase:firebase-analytics'

    implementation project(':nativetemplates')
    //    open ad
    implementation 'com.github.1902shubh:AdmobOpenAds:1.0.1'

}